# Dragos-SceneBuilder

./: .gitignore  .tracking  README.md  __init__.py  nodes.py  pyproject.toml  scene_builder.py
.github/workflows/: publish_action.yml
web/: dragos_dynamic.js  dragos_prompt_loader.js  dragos_structured_builder.js
web/prompts/: AuraFlow.txt  Flux .1.txt  Flux 1.txt  Flux 2 Klein.txt  Illustrious.txt  NoobAI.txt  Pony.txt  Qwen.txt  SD1.5.txt  SD3.5.txt  SDXL.txt  Z-Image.txt
web/schema/: actions.json  camera.json  character_female.json  character_female_animal.json  character_female_anthro.json  character_female_human.json  character_male.json  character_male_animal.json  character_male_anthro.json  character_male_human.json  character_placement.json  clothes.json  clothes_accessories.json  environment.json  style.json
web/schema/Characters/: Eiko clothes.json  Eiko.json
workflows/: Dragos Scene Builder Template.json
